<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/create_new_account"
            android:gravity="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_regisuname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:padding="5dp"
            android:hint="@string/masukkan_username"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_regisemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="7dp"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:hint="@string/masukkan_email"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_regispasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="7dp"
            android:padding="5dp"
            android:inputType="textPassword"
            android:hint="@string/masukkan_password"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>