<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_nama_lengkap"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/edt_jabatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jabatan"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/edt_pendidikan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pendidikan"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/edt_tmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tmt"
                android:inputType="date"
                android:maxLines="1"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/edt_jk_aparatur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jk"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:background="@color/white"/>


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_submit"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="cek" />

    </LinearLayout>
</ScrollView>